fixed About overflow bug

--- a/public/css/Panel.css
+++ b/public/css/Panel.css
@@ -1,30 +1,23 @@
 .panel_container {
-    background: #2C1C4B;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+    color:#F0E9FB;
+    background-color: #2C1C4B;
     border-radius: 12px;
-    width: 400px;
-    min-width: 300px;
-    min-height: 18%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-	justify-items: center;
     padding: 35px;
-    color: #F0E9FB;
+    box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.1), 0px 10px 10px rgba(0, 0, 0, 0.04);
+    min-width: 300px;
+    flex: 1 1 0px;
 }
 
 .panel_header {
     display: flex;
-    width: 100%;
-	align-items: center; 
-    margin-bottom: 20px;
+    flex-direction: row;
 }
 
 .panel_icon {
-    font-size: 1.5em;
+    align-self: center;
     margin-right: 20px;
+    font-size: 1.5em;
 }
-
 
 .panel_subheader {
     font-family: 'Montserrat', sans-serif;
@@ -56,11 +49,3 @@
 
 
 
-/* Small Screens */
-@media only screen and (max-width: 768px) {
-    .panel_container{
-        width: 100%;
-        min-width: none;
-        min-height: none;
-    }
-}
